[project]
name = "hass-myheat"
version = "0.4.1"
description = "MyHeat integration plugin for HomeAssistant"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.13.2"

dependencies = [
    # "aiohttp >=3,<4",
    # "homeassistant >=2025",
    # "voluptuous >=0.12.1",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "flake8",
    "reorder-python-imports",
    "pytest >=8,<9",
    "pytest-homeassistant-custom-component >=0.13.244",
    "bandit",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "pydocstyle >=6.0.0",
    "prospector[with_vulture]",
    "pytest-asyncio",
]

[[project.authors]]
name = "Vladimir Ermakov"
email = "vooon341@gmail.com"

[tool.hatch.build.targets.wheel.force-include]
"./" = "custom_components/myheat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
indent = "\"    \""
not_skip = "__init__.py"
force_sort_within_sections = true
sections = "FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
known_first_party = "custom_components.myheat, tests"
combine_as_imports = true

[tool.pytest]
asyncio_mode = "auto"

[tool.pytest.ini_options]
addopts = ["-qq", "--cov=custom_components.myheat", "--asyncio-mode=auto"]
console_output_style = "count"

[tool.coverage.run]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.mypy]
python_version = '3.13'
ignore_errors = false
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
exclude='custom_components\/(?!myheat).*'

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | deps
                     # the root of the project
)
| custom_components\/(?!myheat).*
'''

[tool.flake8]
exclude = ".venv,.git,.tox,docs,venv,bin,lib,deps,build"
doctests = true
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore = [
    "E501",
    "W503",
    "E203",
    "D202",
    "W504"
]
